Fixed 3d Text, jump force and added support for gold cubes

--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,7 @@ body {
 
 .texture-selector {
   transform: scale(5);
+  left: 47%;
 }
 
 .texture-selector img.active {
